--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-dataflow-rest-client</artifactId>
-			<version>2.3.0.BUILD-SNAPSHOT</version>
+			<version>2.2.1.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-dataflow-server-core</artifactId>
-			<version>2.3.0.BUILD-SNAPSHOT</version>
+			<version>2.2.1.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
